# widthresearch

./: .env  AGENTS.md  MULTI_AGENT_GRAPH_REVIEW.md  RAG-pipeline.md  README.md  debug_context7_tools.py  debug_state.py  inspect_context7_tools.py  main.py  need_fix.md  requirements-test.txt  requirements.txt  test_executoragent_run.py  test_multiagent.py
.opencode/: CLAUDE.md  CODE_ANALYSIS_REPORT.md
agent_state_summary/: executor_agent_state.md  multiagent_state.md  plan_state.md
agents/: AGENTS.md  agents.py  executor_pool.py  executoragent.py  multi_agent.py  multi_agent_graph.py  old_executot.py  planneragent.py
api/: routes.py
core/: build_base_vector_store.py  extract_company_info.py  file_deduplicator.py  llms.py  log_config.py
docs/: API.md  DEPLOYMENT.md
examples/: bge_rerank_postprocessor_example.py
markdown/: Challenge.md  RAG-pipeline.md
test_code/: get_context7_grep.py  test_BGEReranker.py  test_batch_rerank.py  test_context7_grep.py  test_document_process.py  test_executor_pool_serialization.py  test_executoragent_run.py  (+7 more)
tools/core_tools/: AGENTS.md  README.md  README_MCP.md  __main__.py  akshare_searcher.py  exa_context.py  exa_summary.py  mcp_config_example.json  optional_save_schema.md  paper.py  pyproject.toml  sec_edgar.py  tavily.py  wikipedia_searcher.py
tools/core_tools/paper_parse_guide/: akshare_paper_guide.md  paper_parse_openalex.md  paper_parse_sec_edgar.md  paper_parse_semantic_scholar.md  paper_parse_tavily.md
tools/core_tools/test_tool/: test_Crunchbase_demo-uuid-12345.md  test_tavily_search_20260114_194145.md
(+286 files in other folders)
